--- a/app/src/main/res/layout/activity_keyboard_in.xml
+++ b/app/src/main/res/layout/activity_keyboard_in.xml
@@ -9,6 +9,11 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp">
 
+        <EditText
+            android:id="@+id/et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="输入"/>
 
     </LinearLayout>
 </layout>
