--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <ScrollView
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:paddingLeft="16dp"
             android:paddingRight="16dp">
+
+            <Button
+                android:id="@+id/btn_ipc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="IPC-进程间通信"
+                android:textAllCaps="false" />
 
             <Button
                 android:id="@+id/btn_keyboard_main"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="软键盘"
                 android:onClick="onClick"
+                android:text="软键盘"
                 android:textAllCaps="false" />
-
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 </layout>
 
 
