--- a/app/src/main/res/layout/activity_ipc.xml
+++ b/app/src/main/res/layout/activity_ipc.xml
@@ -8,6 +8,14 @@
         android:padding="16dp">
 
         <Button
+            android:id="@+id/btn_to_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="Intent打电话"
+            android:textAllCaps="false" />
+
+        <Button
             android:id="@+id/btn_to_target_activity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
