--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,14 @@
             android:paddingRight="16dp">
 
             <Button
+                android:id="@+id/btn_update"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="更新APK"
+                android:textAllCaps="false" />
+
+            <Button
                 android:id="@+id/btn_ipc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
