--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -4,24 +4,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:divider="@drawable/shape_divider_horizontal_pink"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp"
+        android:showDividers="middle">
 
         <Button
             android:id="@+id/btn_simple_update"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:onClick="onClick"
             android:text="下载apk更新"
             android:textAllCaps="false" />
 
-        <!--<Button-->
-            <!--android:id="@+id/btn_to_target_activity"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:onClick="onClick"-->
-            <!--android:text="Intent跳转其他应用"-->
-            <!--android:textAllCaps="false" />-->
+        <Button
+            android:id="@+id/btn_progressbar_update"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:onClick="onClick"
+            android:text="下载apk,带进度条"
+            android:textAllCaps="false" />
     </LinearLayout>
 </layout>
 
