--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -20,15 +20,33 @@
             android:text="下载apk更新"
             android:textAllCaps="false" />
 
-        <Button
-            android:id="@+id/btn_progressbar_update"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:onClick="onClick"
-            android:text="下载apk,带进度条"
-            android:textAllCaps="false" />
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_progressbar_update"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="下载apk,带进度条"
+                android:textAllCaps="false" />
+
+            <ProgressBar
+                android:id="@+id/pb_update"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="6dp"
+                android:progressDrawable="@drawable/layer_list_progressbar"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp"
+                android:max="100" />
+        </LinearLayout>
+
+
     </LinearLayout>
 </layout>
 
