--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -27,12 +27,25 @@
             android:layout_marginRight="16dp"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="下载apk,带进度条"/>
+
             <Button
-                android:id="@+id/btn_progressbar_update"
+                android:id="@+id/btn_progressbar_update_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
-                android:text="下载apk,带进度条"
+                android:text="方法1"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_progressbar_update_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="方法2"
                 android:textAllCaps="false" />
 
             <ProgressBar
