IPC: intent 跳转 应用

--- a/test/src/main/res/layout/activity_ipc_target.xml
+++ b/test/src/main/res/layout/activity_ipc_target.xml
@@ -29,6 +29,14 @@
             android:layout_marginTop="16dp"
             android:text="data"
             android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:onClick="onClick"
+            android:text="返回原来的应用"/>
     </LinearLayout>
 </layout>
 
