--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,14 @@
                 android:onClick="onClick"
                 android:text="软键盘"
                 android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_content_resolver"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="ContentResolver操作数据"
+                android:textAllCaps="false" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </layout>
