--- a/app/src/main/res/layout/activity_content_resolver.xml
+++ b/app/src/main/res/layout/activity_content_resolver.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClick"
-            android:text="查询电话号码"
+            android:text="查询系统联系人"
             android:textAllCaps="false" />
 
     </LinearLayout>
