--- a/app/src/main/res/layout/activity_sqlite.xml
+++ b/app/src/main/res/layout/activity_sqlite.xml
@@ -15,6 +15,14 @@
             android:text="创建temp表"
             android:textAllCaps="false" />
 
+        <Button
+            android:id="@+id/btn_insert_temp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="插入两条数据到temp表"
+            android:textAllCaps="false" />
+
 
     </LinearLayout>
 </layout>
