--- a/app/src/main/res/layout/activity_ipc.xml
+++ b/app/src/main/res/layout/activity_ipc.xml
@@ -22,6 +22,14 @@
             android:onClick="onClick"
             android:text="Intent跳转其他应用"
             android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/btn_provider_query"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="ContentProvider-查询"
+            android:textAllCaps="false" />
     </LinearLayout>
 </layout>
 
