--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,14 @@
                 android:onClick="onClick"
                 android:text="SQLite"
                 android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/btn_net"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="网络"
+                android:textAllCaps="false" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </layout>
